# LimeSDR-Micro_VSPA

./: .clang-format  .gitignore  CMakeLists.txt  readme.md  vspacc_toolchain.cmake
.github/workflows/: cmake-build.yml
LCF/: la9310_iqplayer.lcf
Sources/: CMakeLists.txt  _main.c  dfe.c  iqmod_rx.c  iqmod_rx_2R_decx2x4.c  iqmod_tx.c  iqmod_tx_2R.c  signal.c
Sources/para_files/: 8xdown_coeff.txt  h_2x_32tap_stop10000_FR1_gain2p4.bin.txt  h_4x_64tap_stop10000_FR1_gain4p8.bin.txt
include/: dfe.h  iqmod_rx.h  iqmod_tx.h  l1-trace.h  main.h
vspa-lib/: CMakeLists.txt
vspa-sdk/: CMakeLists.txt
vspa-sdk/inc/: axiq-hs.h  axiq-la1224.h  axiq-la9310.h  axiq-ls.h  chip-la1224.h  chip-la9310.h  ippu.h  vcpu.h
